--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -12,7 +12,7 @@
             <i class="fa-solid fa-list"></i>
 
           </button>
-          <button class="btn btn-warning btn-sm me-2" (click)="editTodo(todo)">
+          <button class="btn btn-warning btn-sm me-2" (click)="selectTodoForUpdate(todo)">
             <i class="fa-solid fa-pen-to-square"></i>
           </button>
           <button class="btn btn-danger btn-sm" (click)="deleteTodo(todo.id)">
@@ -22,6 +22,9 @@
       </li>
     </ul>
   </div>
+
+  <app-update-todo *ngIf="selectedTodo" [todoToUpdate]="selectedTodo"></app-update-todo>
+
   
   
   
