--- a/src/app/todo-template-driven-form/todo-template-driven-form.component.html
+++ b/src/app/todo-template-driven-form/todo-template-driven-form.component.html
@@ -1,1 +1,56 @@
 <app-head-bar></app-head-bar>
+<div class="container mt-3">
+    <h2>Ajouter une nouvelle tâche</h2>
+    <form #todoForm="ngForm" (ngSubmit)="onSubmit(todoForm)">
+      <div class="mb-3">
+        <label for="title" class="form-label">Titre</label>
+        <input
+          type="text"
+          id="title"
+          name="title"
+          class="form-control"
+          [(ngModel)]="newTodo.title"
+          required
+        />
+      </div>
+  
+      <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <textarea
+          id="description"
+          name="description"
+          class="form-control"
+          [(ngModel)]="newTodo.description"
+          required
+        ></textarea>
+      </div>
+  
+      <div class="mb-3">
+        <label for="date" class="form-label">Date</label>
+        <input
+          type="date"
+          id="date"
+          name="date"
+          class="form-control"
+          [(ngModel)]="newTodo.date"
+          required
+        />
+      </div>
+  
+      <div class="mb-3">
+        <label class="form-label">
+          <input
+            type="checkbox"
+            name="done"
+            [(ngModel)]="newTodo.done"
+          />
+          Terminé
+        </label>
+      </div>
+  
+      <button type="submit" class="btn btn-primary" [disabled]="!todoForm.valid">
+        Ajouter
+      </button>
+    </form>
+  </div>
+  
